# Video-Director

./: .gitignore  API_Doc.md  Dockerfile  README.md  README_cn.md  docker-compose.yml  pyproject.toml  video_director.py
config/: .dockerignore  constant_config.py  path_config.py  schema_config.py
data/: ai_request.example.json  ai_response.example.json  tts_data.json
functionals/: check_compliance.py  logger.py  optimize_script.py  recommend.py  select_material.py  utils.py
models/: llm_models.py
